// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DAY 1`] = `"2018-01-01T00:00:00.000Z"`;

exports[`WEEK 2018-01-01 1`] = `
Object {
  "__typename": "TransactionSettings",
  "date": "2018-01-01T00:00:00.000Z",
  "period": "WEEK",
}
`;

exports[`start WEEK in 2018-01-01 1`] = `"2018-01-01T00:00:00.000Z"`;

exports[`start WEEK in 2018-01-11 1`] = `"2018-01-08T00:00:00.000Z"`;

exports[`start WEEK in 2018-06-13 1`] = `"2018-06-11T00:00:00.000Z"`;

exports[`writeData 1`] = `
Array [
  Object {
    "data": Object {
      "settings": Object {
        "__typename": "AppSettings",
        "transaction": Object {
          "__typename": "TransactionSettings",
          "date": "2018-01-01T00:00:00.000Z",
          "period": "WEEK",
        },
      },
    },
  },
]
`;
